<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_edt_psw_ok"
        android:layout_marginStart="27dp"
        android:layout_marginTop="66dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="68dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_psw"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_confirm_psw"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_edt_psw_ok"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/sign_in_edt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="55dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:labelFor="@+id/sign_in_edt_name"/>

    <EditText
        android:id="@+id/sign_in_edt_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/sign_in_edt_name"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_edt_name"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/sign_in_edt_name"
        android:labelFor="@+id/sign_in_edt_psw"/>

    <EditText
        android:id="@+id/sign_in_edt_psw_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/sign_in_edt_psw"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_edt_psw"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/sign_in_edt_psw"
        android:labelFor="@+id/sign_in_edt_psw_ok"/>

    <Button
        android:id="@+id/sign_in_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_confirm"
        app:layout_constraintRight_toLeftOf="@+id/sign_in_btn_cancel"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="59dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/sign_in_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_cancel"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="71dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/sign_in_btn_ok"
        tools:layout_constraintBaseline_creator="1" />

</android.support.constraint.ConstraintLayout>